_sass/components/angular-image.scss
.angular-image {
  $b: &;

  display: flex;
  flex-direction: column;
  position: relative;
  width: 200px;
  height: 200px;

  &__badge {
    display: inline-block;
    padding: .25rem .75rem;
    margin: auto;
    text-align: center;
    font-size: 1rem;
    color: map-get($colors, light);
    background: map-get($colors, primary);
    z-index: 11;
    position: absolute;
    top: -0.5rem;
    left: 50%;
    transform: translateX(-50%);
  }

  &__container {
    position: relative;
  }

  &__picture {
    height: 100%;
    width: 100%;
    background-color: map-get($colors, light);

    &:before {
      content: "";
      display: block;
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      background-repeat: no-repeat;
      z-index: 10;
    }
  }

  &--small {
    width: 100px;
    height: 100px;
  }

  &--dark {
    .angular-image__picture:before {
      background-image: url('/assets/meta/angular-mask-dark.svg');
    }
  }

  &--light {
    .angular-image__picture:before {
      background-image: url('/assets/meta/angular-mask-light.svg');
    }
  }
}

